# steelbeam

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tests.py
.ipynb_checkpoints/: README-checkpoint.md
app/: steelbeam_gui.py  utils.py
examples/_dxf/: IPE200.dxf
src/: __init__.py  analysis_AISC.py  analysis_EC.py  analysis_NBR.py  geometry.py  profilesdb_EU.json  steelbeam.py  units.py
src/.ipynb_checkpoints/: steel_beam-checkpoint.py
src/steelbeam/: __init__.py  analysis_AISC.py  analysis_EC.py  analysis_NBR.py  geometry.py  profilesdb_AISC.json  profilesdb_EU.json  steelbeam.py  units.py
src/steelbeam/.ipynb_checkpoints/: steelbeam-checkpoint.py
tests/: __init__.py  test_analysis_EC.py  test_resistance_EC3.py  test_stability.py  test_steelbeam.py  test_units.py
